# apps/api/openapi.json
@@ -237,10 +237,14 @@
               }
             ],
             "nullable": true
+          },
+          "registrationOpen": {
+            "type": "boolean"
           }
         },
         "required": [
-          "user"
+          "user",
+          "registrationOpen"
         ]
       },
       "ServerMetaResponse": {
